# drone-tracking-datasets

./: .gitignore  convert_dataset_to_yolo.py  dataloader.ipynb  extract_frames.py  ffmpeg_extract_frames.py  pyproject.toml  run_grounding_dino.py  visualize.ipynb  visualize_video.py
dataset/: centralize_dataset.py  dataset.py  transforms.py
