[tool.poetry]
name = "drone-tracking-datasets"
version = "0.1.0"
description = ""
authors = ["derek <dcaustin33@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-python = "^4.10.0.84"
torchvision = "^0.19.1"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
